# OmniTouch

./: .gitignore  Cargo.toml  README.md  app.manifest  build.rs  任务.md
src/: app_state.rs  config.rs  main.rs
src/core/: event_handler.rs  mod.rs  wndprocs.rs
src/input/: handler.rs  mod.rs  vigem_wrapper.rs
src/ui/: base.rs  mod.rs  panels.rs  render.rs
